# clinical-ai-adoption-clinicaltrials.gov

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: aggregate.py  charts.py  fetch.py
