[project]
name = "ct-gov-explorer"
version = "0.1.0"
description = "Streamlit app for exploring ClinicalTrials.gov AI/LLM trial registrations by country"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32",
    "pandas>=2.2",
    "plotly>=5.20",
    "requests>=2.31",
    "pyarrow>=15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
